src/objects/Available_Channel__c.object
<CustomObject>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FBMessage</fullName>
                </value>
                <value>
                    <fullName>Live Agent</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>WhatsApp</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ContactUs_SubType2__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ContactUs SubType2</label>
        <referenceTo>Contact_Us_SubType2_Option__c</referenceTo>
        <relationshipLabel>Available Channels</relationshipLabel>
        <relationshipName>Available_Channels</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <label>View</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Available Channel</label>
    <nameField>
        <label>Available Channel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Available Channels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>